--- a/src/styles/layouts/_grid.scss
+++ b/src/styles/layouts/_grid.scss
@@ -3,7 +3,7 @@
 
 @use 'sass:math';
 @use '../utilities/functions' as FN;
-@use '../utilities/variables' as *;
+@use '../utilities/variables' as VAR;
 
 /**
  * @description Establishes a grid container.
@@ -18,6 +18,19 @@
 // Grid Template Mixins
 @mixin cols($count) {grid-template-columns: repeat($count, minmax(0, 1fr));}
 @mixin rows($count) {grid-template-rows: repeat($count, minmax(0, 1fr));}
+
+
+/**
+* @description Establishes a grid container with a specified number of columns.
+* @param {number} $count - The number of columns.
+
+/// EXAMPLE USAGE
+.custom-grid {
+  display: grid;
+  @include cols-custom("1fr_auto_1fr");
+}
+
+*/
 
 @mixin cols-custom($template) {
   // Convert underscores to spaces so "1fr_auto" becomes "1fr auto"
@@ -68,42 +81,69 @@
   grid-row: $row;
 }
 @mixin position-col($col) {
-  grid-column: $start;
+  grid-column: $col;
 }
 @mixin position-row($row) {
   grid-row: $row;
 }
 
-
-/// EXAMPLE USAGE
-.custom-grid {
-  display: grid;
-  @include cols-custom("1fr_auto_1fr");
-}
+@mixin grid-gap($value) { gap: $value; }
+@mixin col-gap($value) { column-gap: $value; }
+@mixin row-gap($value) { row-gap: $value; }
 
 // Classes
 .grid { @include grid; }
 .grid.inline { @include grid-inline; }
 
-// Grid Template Classes
-@each $breakpoint, $width in $breakpoints {
-    // Responsive grid columns
-    @media (min-width: #{$width}) {
-      .grid { @include grid; }
 
-      @for $i from 1 through $column-count {
-        .grid.cols-#{$i} { @include cols($i); }
-        .grid.rows-#{$i} { @include rows($i); }
-    
-      .grid.cols-#{$i}\@#{$breakpoint} {
-        @include cols($i);
-      }
+@for $i from 1 through VAR.$column-count {
+  .grid.cols-#{$i} { @include cols($i); }
+  .grid.rows-#{$i} { @include rows($i); }
+}
+
+// Grid Template Classes
+@each $breakpoint, $width in VAR.$breakpoints {
+  // Responsive grid columns
+  @media (min-width: #{$width}) {
+    @for $i from 1 through VAR.$column-count {
+      .grid.cols-#{$i}\@#{$breakpoint} { @include cols($i); }
+      .grid.rows-#{$i}\@#{$breakpoint} { @include rows($i); }
     }
   }
 }
 
+
+// Add corresponding classes
+.grid-gap-1 { @include grid-gap(0.25rem); }
+.grid-gap-2 { @include grid-gap(0.5rem); }
+.grid-gap-4 { @include grid-gap(1rem); }
+.col-gap-1 { @include col-gap(0.25rem); }
+.col-gap-2 { @include col-gap(0.5rem); }
+.col-gap-4 { @include col-gap(1rem); }
+.row-gap-1 { @include row-gap(0.25rem); }
+.row-gap-2 { @include row-gap(0.5rem); }
+.row-gap-4 { @include row-gap(1rem); }
+
+// Responsive grid gaps
+@each $breakpoint, $width in VAR.$breakpoints {
+  @media (min-width: #{$width}) {
+    .grid-gap-1\@#{$breakpoint} { @include grid-gap(0.25rem); }
+    .grid-gap-2\@#{$breakpoint} { @include grid-gap(0.5rem); }
+    .grid-gap-4\@#{$breakpoint} { @include grid-gap(1rem); }
+
+    .col-gap-1\@#{$breakpoint} { @include col-gap(0.25rem); }
+    .col-gap-2\@#{$breakpoint} { @include col-gap(0.5rem); }
+    .col-gap-4\@#{$breakpoint} { @include col-gap(1rem); }
+    
+    .row-gap-1\@#{$breakpoint} { @include row-gap(0.25rem); }
+    .row-gap-2\@#{$breakpoint} { @include row-gap(0.5rem); }
+    .row-gap-4\@#{$breakpoint} { @include row-gap(1rem); }
+  }
+}
+
+
 // Generate Column Span Classes with Responsive Variants
-@for $i from 1 through $column-count {
+@for $i from 1 through VAR.$column-count {
   .span-col-#{$i} {
     @include span-col($i);
   }
@@ -112,7 +152,7 @@
     @include span-row($i);
   }
 
-  @each $breakpoint, $width in $breakpoints {
+  @each $breakpoint, $width in VAR.$breakpoints {
     @media (min-width: #{$width}) {
       .span-col-#{$i}\@#{$breakpoint} {
         @include span-col($i);
@@ -127,9 +167,9 @@
 
 
 // Auto-fit/fill Classes
-@each $breakpoint, $width in $breakpoints {
-  .grid.auto-fit-#{$breakpoint} { @include auto-fit($width); }
-  .grid.auto-fill-#{$breakpoint} { @include auto-fill($width); }
+@each $size, $width in VAR.$grid-item-sizes {
+  .grid.auto-fit-#{$size} { @include auto-fit($width); }
+  .grid.auto-fill-#{$size} { @include auto-fill($width); }
 }
 
 // Flow Classes
@@ -150,7 +190,7 @@ $alignments: (
   .align-items-#{$name} { align-items: $value; }
   .place-items-#{$name} { place-items: $value; }
 
-  @each $breakpoint, $width in $breakpoints {
+  @each $breakpoint, $width in VAR.$breakpoints {
     @media (min-width: #{$width}) {
       .justify-items-#{$name}\@#{$breakpoint} {
         justify-items: $value;
