--- a/src/styles/utilities/_display.scss
+++ b/src/styles/utilities/_display.scss
@@ -4,6 +4,19 @@
 @use './variables' as *;
 @use './functions' as FN;
 
+/**
+ * Display Utilities
+ *
+ * Classes:
+ * - .hide, .show: Control element visibility
+ * - .block, .inline, .inline-block: Basic display modes
+ * - .d-tbl, .d-tbl-row, .d-tbl-cell: Table display modes
+ * - .overflow-hidden: Control overflow behavior
+ *
+ * All utilities support responsive variants with @breakpoint suffix:
+ * - .hide@md, .block@lg, etc.
+ */
+
 // Display Mixins
  
 /**
@@ -47,8 +60,22 @@
 @mixin d-tbl-cell { display: table-cell; }
 
 
+@mixin visible { visibility: visible; }
+@mixin invisible { visibility: hidden; }
+@mixin collapse { visibility: collapse; }
+@mixin contents { display: contents; }
 
 @mixin overflow-hidden { overflow: hidden; }
+@mixin overflow-visible { overflow: visible; }
+@mixin overflow-scroll { overflow: scroll; }
+@mixin overflow-auto { overflow: auto; }
+@mixin overflow-x-hidden { overflow-x: hidden; }
+@mixin overflow-y-hidden { overflow-y: hidden; }
+@mixin overflow-x-scroll { overflow-x: scroll; }
+@mixin overflow-y-scroll { overflow-y: scroll; }
+@mixin overflow-x-auto { overflow-x: auto; }
+@mixin overflow-y-auto { overflow-y: auto; }
+
 
 // Base Classes 
 .hide { @include hide; }
@@ -56,7 +83,21 @@
 .block { @include block; }
 .inline { @include inline; }
 .inline-block { @include inline-block; }
+.visible { @include visible; }
+.invisible { @include invisible; }
+.collapse { @include collapse; }
+.contents { @include contents; }
 .overflow-hidden { @include overflow-hidden; }
+.overflow-visible { @include overflow-visible; }
+.overflow-scroll { @include overflow-scroll; }
+.overflow-auto { @include overflow-auto; }
+.overflow-x-hidden { @include overflow-x-hidden; }
+.overflow-y-hidden { @include overflow-y-hidden; }
+.overflow-x-scroll { @include overflow-x-scroll; }
+.overflow-y-scroll { @include overflow-y-scroll; }
+.overflow-x-auto { @include overflow-x-auto; }
+.overflow-y-auto { @include overflow-y-auto; }
+
 
 .d {
   &-tbl { @include d-tbl; }
@@ -72,8 +113,21 @@
     .block\@#{$breakpoint} { @include block; }
     .inline\@#{$breakpoint} { @include inline; }
     .inline-block\@#{$breakpoint} { @include inline-block; }
+    .visible\@#{$breakpoint} { @include visible; }
+    .invisible\@#{$breakpoint} { @include invisible; }
+    .collapse\@#{$breakpoint} { @include collapse; }
+    .contents\@#{$breakpoint} { @include contents; }
     .overflow-hidden\@#{$breakpoint} { @include overflow-hidden; }
-   
+    .overflow-visible\@#{$breakpoint} { @include overflow-visible; }
+    .overflow-scroll\@#{$breakpoint} { @include overflow-scroll; }
+    .overflow-auto\@#{$breakpoint} { @include overflow-auto; }
+    .overflow-x-hidden\@#{$breakpoint} { @include overflow-x-hidden; }
+    .overflow-y-hidden\@#{$breakpoint} { @include overflow-y-hidden; }
+    .overflow-x-scroll\@#{$breakpoint} { @include overflow-x-scroll; }
+    .overflow-y-scroll\@#{$breakpoint} { @include overflow-y-scroll; }
+    .overflow-x-auto\@#{$breakpoint} { @include overflow-x-auto; }
+    .overflow-y-auto\@#{$breakpoint} { @include overflow-y-auto; }
+
     .d {
       &-tbl\@#{$breakpoint} { @include d-tbl; }
       &-tbl-row\@#{$breakpoint} { @include d-tbl-row; }
