--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,4 +1,17 @@
 @use 'sass:map';
+@use 'sass:math';
+
+$base-size: 16;
+@function rem($px) {
+  @if $px == 0 {
+    @return 0;
+  }
+  
+  // Strip units if $px has any
+  $value: if(math.unit($px) == '', $px, math.div($px, math.unit($px)));
+  
+  @return math.div($value, $base-size) * 1rem;
+}
 
 // Global variables that might be used across different modules
 $enable-debuger: false !default;
@@ -26,7 +39,6 @@ $color-primitives: (
   'purple': #a855f7,
   'pink': #ec4899
 ) !default;
-
 
 $theme-tokens: (
   'background',
@@ -56,7 +68,6 @@ $dark-theme: (
   'text-secondary': #a3a3a3
 ) !default;
 
-
 // Breakpoints
 $breakpoints: (
   'xs': 480px,
@@ -67,14 +78,12 @@ $breakpoints: (
   '2xl': 1536px, 
 ) !default;
 
-// Container max-widths
-$container-max-widths: (
-  'xs': 450px,
-  'sm': 540px,
-  'md': 720px,
-  'lg': 960px,
-  'xl': 1140px,
-  '2xl': 1320px,
+$grid-item-sizes: (
+  'xs': 200px,
+  'sm': 250px, 
+  'md': 300px,
+  'lg': 350px,
+  'xl': 400px
 ) !default;
 
 // _variables.scss
@@ -89,9 +98,28 @@ $font-sizes: (
   '4xl': 2.5rem   // 40px
 ) !default;
 
+@debug rem(4);
+// Updated spacing map
 $spacings: (
-  0,1,2,3,4,5,10,15,20,25,30,35,40,45,50,60,70,80,90,100,150,200,250,300,350,400,450,500
-) !default;
+  0: 0,
+  1: rem(4),    // 0.25rem
+  2: rem(8),    // 0.5rem
+  3: rem(12),   // 0.75rem
+  4: rem(16),   // 1rem
+  5: rem(20),   // 1.25rem
+  6: rem(24),   // 1.5rem
+  8: rem(32),   // 2rem
+  10: rem(40),  // 2.5rem
+  12: rem(48),  // 3rem
+  16: rem(64),  // 4rem
+  20: rem(80),  // 5rem
+  24: rem(96),  // 6rem
+  32: rem(128), // 8rem
+  40: rem(160), // 10rem
+  48: rem(192), // 12rem
+  56: rem(224), // 14rem
+  64: rem(256)  // 16rem
+);
 
 $percentages: (
   0, 5, 10, 20, 25, 30, 40, 50, 60, 70, 75, 80, 90, 100
